--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
@@ -28,6 +29,7 @@
     "express-handlebars": "^3.0.0",
     "express-validator": "^2.20.4",
     "jsonwebtoken": "^5.7.0",
+    "mocha": "^2.5.3",
     "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
