--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-validator": "^2.20.4",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^5.7.0",
     "mocha": "^2.5.3",
     "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
-    "react": "15.1.0",
+    "react": "^15.1.0",
     "react-cookie": "^0.4.5",
-    "react-dom": "15.1.0",
+    "react-dom": "^15.1.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
     "react-transform-catch-errors": "^1.0.2",
@@ -47,6 +48,7 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
     "request": "^2.69.0",
+    "request-promise-native": "^1.0.3",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
